# tum-science-hack25

./: .gitignore  HEATMAP_README.md  LICENSE  README.md  docker-compose.yml  index.html  kharkiv_heatmap.py  kharkiv_interactive_heatmap.html  kharkiv_simple_heatmap.py  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  requirements.txt  tailwind.config.cjs  vite.config.js
assets/: operator_monthly_example.xlsx
backend/: govt.py  map_generator.py  pdf_report_generator.py  server.py
client/: .dockerignore  Dockerfile  Dockerfile.local  Makefile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/assets/: teamlead_monthly_example.xlsx
client/pages/: GovOverview.jsx  OperatorHome.jsx
client/src/: App.jsx  index.css
docker/nginx/: cert.crt  private.key
docker/postgresql/: Dockerfile
server/: .env  Dockerfile  Makefile  README.md  SEED_README.md  create_tables.py  drop_tables.py  pytest.ini  seed_sectors.py  seed_users.py  verify-users.py  verify_sectors.py
server/alembic/: env.py
server/app/: config.py  database.py  dtos.py  enums.py  main.py  models.py
server/docs/: requirements.txt
src/: App.jsx  index.css
src/HumanitarianDemining/: government.py  partner_land_allocation.py  partner_land_allocation_graph.py  synthetic_data.py  visualize_map.py
src/HumanitarianDemining.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/contexts/: TeamLeadContext.jsx
src/pages/: CivilianEmergency.jsx  GovDownload.jsx  GovOverview.jsx  GovRegional.jsx  Login.jsx  NgoHome.jsx  NgoOperations.jsx  (+9 more)
(+71 files in other folders)
