[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HumanitarianDemining"
version = "0.1.0"
description = "Interactive visualization and backend API for demining operations"
authors = [{ name = "Jane Doe", email = "jane.doe@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "coverage",
]
cuda = ["torch @ https://download.pytorch.org/whl/cu121"]

[tool.setuptools]
package-dir = { "" = "src" }
